# sysbreak_trust

./: .gitignore  AUDIT_REPORT.md
contracts/: Cargo.toml  README.md
contracts/solidity-reference/corporationDAO/: CorporationDAO.sol  security_audit.md
contracts/solidity-reference/sysbreakAchievementNFT_contract/: SysbreakAchievementNFT.sol  security_audit.md
contracts/solidity-reference/sysbreakItemNFT/: security_audit.md
contracts/sysbreak-achievement-nft/src/: lib.rs  msg.rs  state.rs
contracts/sysbreak-corporation-dao/src/: contract.rs  error.rs  msg.rs
contracts/sysbreak-corporation-dao/tests/: integration.rs
contracts/sysbreak-credit-bridge/: Cargo.toml
contracts/sysbreak-credit-bridge/src/: helpers.rs  lib.rs
contracts/sysbreak-item-nft/src/: contract.rs  lib.rs  msg.rs  state.rs
scripts/: build.sh
solidity-reference/sysbreakCreditBridge/: SysbreakCreditBridge.sol
solidity-reference/sysbreakItemNFT/: SysbreakItemNFT.sol
sysbreak-achievement-nft/: Cargo.toml
sysbreak-achievement-nft/src/: contract.rs  error.rs  helpers.rs
sysbreak-achievement-nft/tests/: integration.rs
sysbreak-corporation-dao/: Cargo.toml
sysbreak-corporation-dao/src/: helpers.rs  state.rs
sysbreak-credit-bridge/src/: contract.rs  error.rs  msg.rs  state.rs
sysbreak-credit-bridge/tests/: integration.rs
sysbreak-item-nft/: Cargo.toml
sysbreak-item-nft/src/: error.rs  helpers.rs
sysbreak-item-nft/tests/: integration.rs
