[package]
name = "sysbreak-corporation-dao"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "SYSBREAK corporation (guild) governance DAO contract"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
